@@ -43,6 +43,7 @@ version <next>:
 - add --disable-autodetect build switch
 - drop deprecated qtkit input device (use avfoundation instead)
 - despill video filter
+- haas audio filter
 
 version 3.3:
 - CrystalHD decoder moved to new decode API
